--- a/index.css
+++ b/index.css
@@ -18,3 +18,27 @@
     margin-top: 0;
     color: rgba(0, 0, 0, 0.6);
 }
+.formulario__input,
+.formulario__label,
+.formulario__submit {
+    display: block;
+    font-size: 1.3em;
+    max-width: 100%;
+    width: 100%;
+}
+
+.formulario__input {
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    margin-bottom: 40px;
+    background: transparent;
+
+}
+
+.formulario__label {
+    padding-left: 15px;
+    position: absolute;
+    margin-top: -85px;
+
+}
