--- a/index.css
+++ b/index.css
@@ -1,61 +1,76 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .formulario {
-    width: 500px;
-    max-width: 100%;
-    margin: auto;
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.5);
-    position: relative;
-    padding: 20px;
-    margin-top: 30px;
+  width: 500px;
+  max-width: 100%;
+  margin: auto;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.5);
+  position: relative;
+  padding: 20px;
+  margin-top: 30px;
 }
 
 .formulario__titulo {
-    margin-bottom: 50px;
-    text-align: center;
-    margin-top: 0;
-    color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 50px;
+  text-align: center;
+  margin-top: 0;
+  color: rgba(0, 0, 0, 0.6);
 }
 .formulario__input,
 .formulario__label,
 .formulario__submit {
-    display: block;
-    font-size: 1.3em;
-    max-width: 100%;
-    width: 100%;
+  display: block;
+  font-size: 1.3em;
+  max-width: 100%;
+  width: 100%;
 }
 
 .formulario__input {
-    padding: 20px;
-    background: rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    margin-bottom: 40px;
-    background: transparent;
-
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  margin-bottom: 40px;
+  background: transparent;
 }
 
 .formulario__label {
-    padding-left: 15px;
-    position: absolute;
-    margin-top: -85px;
-
+  padding-left: 15px;
+  position: absolute;
+  margin-top: -85px;
 }
 .formulario__label {
-    padding-left: 15px;
-    position: absolute;
-    margin-top: -85;
-    z-index: -20;
-    color: rgba(0, 0, 0, 0.5);
-    transition: all 0.9s;
+  padding-left: 15px;
+  position: absolute;
+  margin-top: -85;
+  z-index: -20;
+  color: rgba(0, 0, 0, 0.5);
+  transition: all 0.9s;
 }
 
 .formulario__input:focus {
-    border-color: rgb(0, 110, 255);
-    outline: 1px solid rgba(0, 0, 0, 0.0);
+  border-color: rgb(0, 110, 255);
+  outline: 1px solid rgba(0, 0, 0, 0);
 }
 
-.formulario__input+.formulario__label {
-    margin-top: -135px; 
+.formulario__input + .formulario__label {
+  margin-top: -135px;
+}
+
+.formulario__submit {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 10px 15px;
+  cursor: pointer;
+  border: none;
+}
+
+.fijar {
+  margin-top: -135px;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
 }
